@@ -1979,22 +1979,36 @@ qstat_show_job(sge_gdi_ctx_class_t *ctx, lList *jid_list, u_long32 isXML, qstat_
          }
       }
    }
-   what = lWhat("%T(%I%I%I%I%I%I%I%I%I%I%I%I%I%I%I->%T%I%I%I%I%I%I->%T%I%I%I%I->%T(%I%I%I%I%I)"
+   what = lWhat("%T(%I%I%I%I%I%I%I%I%I%I%I%I%I%I%I->%T%I%I%I%I%I%I->%T%I%I%I%I->%T(%I%I%I%I%I%I)"
             "%I%I%I%I->%T(%I)%I->%T(%I)%I%I%I%I%I%I%I%I%I%I%I%I%I%I%I->%T%I%I%I%I%I%I%I%I%I%I)",
-            JB_Type, JB_job_number, JB_ar, JB_exec_file, JB_submission_time, JB_owner,
-            JB_uid, JB_group, JB_gid, JB_account, JB_merge_stderr, JB_mail_list,
-            JB_project, JB_notify, JB_job_name, JB_stdout_path_list, PN_Type,
-  	    JB_jobshare, JB_hard_resource_list, JB_soft_resource_list,
-            JB_hard_queue_list, JB_soft_queue_list, JB_shell_list, PN_Type,
-            JB_env_list, JB_job_args, JB_script_file, JB_ja_tasks,
+            JB_Type, JB_job_number, JB_ar, JB_exec_file, JB_submission_time, 
+            JB_owner, JB_uid, JB_group, JB_gid, JB_account, JB_merge_stderr, 
+            JB_mail_list, JB_project, JB_notify, JB_job_name, 
+            JB_stdout_path_list, 
+            /**/
+            PN_Type, JB_jobshare, JB_hard_resource_list, JB_soft_resource_list,
+            JB_hard_queue_list, JB_soft_queue_list, JB_shell_list, 
+            /**/
+            PN_Type, JB_env_list, JB_job_args, JB_script_file, JB_ja_tasks,
+            /**/
             JAT_Type, JAT_status, JAT_task_number, JAT_scaled_usage_list,
-            JAT_task_list, JAT_message_list, JB_context, JB_cwd, JB_stderr_path_list,
-            JB_jid_predecessor_list, JRE_Type, JRE_job_number, JB_jid_successor_list,
-            JRE_Type, JRE_job_number, JB_deadline, JB_execution_time, JB_checkpoint_name,
-            JB_checkpoint_attr, JB_checkpoint_interval, JB_directive_prefix, JB_reserve,
-            JB_mail_options, JB_stdin_path_list, JB_priority, JB_restart, JB_verify,
-            JB_master_hard_queue_list, JB_script_size, JB_pe, RN_Type, JB_pe_range,
-            JB_jid_request_list, JB_verify_suitable_queues, JB_soft_wallclock_gmt,
+            JAT_task_list, JAT_message_list, JAT_start_time,
+            /**/
+            JB_context, JB_cwd, JB_stderr_path_list, JB_jid_predecessor_list, 
+            /**/
+            JRE_Type, JRE_job_number, 
+            /**/
+            JB_jid_successor_list,
+            /**/
+            JRE_Type, JRE_job_number, 
+            /**/
+            JB_deadline, JB_execution_time, JB_checkpoint_name, 
+            JB_checkpoint_attr, JB_checkpoint_interval, JB_directive_prefix, 
+            JB_reserve, JB_mail_options, JB_stdin_path_list, JB_priority, 
+            JB_restart, JB_verify, JB_master_hard_queue_list, JB_script_size, 
+            JB_pe, 
+            RN_Type, JB_pe_range, JB_jid_request_list, 
+            JB_verify_suitable_queues, JB_soft_wallclock_gmt,
             JB_hard_wallclock_gmt, JB_override_tickets, JB_version,
             JB_ja_structure, JB_type, JB_binding); 
    /* get job list */
